--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,19 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cn.magic.magicfloatview.MainActivity">
 
-    <cn.magic.library.flying.MagicFlyingSurfaceView
-        android:id="@+id/flyingView"
+    <cn.magic.library.gift.MagicGiftLinearLayout
+        android:id="@+id/gift_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+    </cn.magic.library.gift.MagicGiftLinearLayout>
+
+    <cn.magic.library.flying.MagicFlyingView
+        android:id="@+id/flying_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
